--- a/Analysis/Elementary Real Analysis/Elementary Real Analysis.tex
+++ b/Analysis/Elementary Real Analysis/Elementary Real Analysis.tex
@@ -83,8 +83,8 @@ The following property is an important characterization of supremums and infinum
 
 \begin{prp}{Approximation Property}{}\\ Let $S$ be a non-empty subset of $\R$. 
 \begin{itemize}
-\item If $\sup(S)$ exists then for all $\varepsilon>0$ there exists $x\in S$ such that $\sup(S)-\varepsilon<x\leq sup(S)$. 
-\item If $\inf(S)$ exists then for all $\varepsilon>0$ there exists $x\in S$ such that $\inf(S)\leq x<inf(S)+\varepsilon$. 
+\item If $\sup(S)$ exists then for all $\varepsilon>0$ there exists $x\in S$ such that $\sup(S)-\varepsilon<x\leq\sup(S)$. 
+\item If $\inf(S)$ exists then for all $\varepsilon>0$ there exists $x\in S$ such that $\inf(S)\leq x<\inf(S)+\varepsilon$. 
 \end{itemize}
 \begin{proof}\\ Notice that since $\sup(S)$ is the supremum of $S$, we have that $\sup(S)-\varepsilon$ is not the supremum of $S$ Thus there exists some element $x\in S$ such that $\sup(S)-\varepsilon<x$. Mirror the proof for the infinum version. 
 \end{proof}
@@ -1116,15 +1116,18 @@ f'(c)(g(b)-g(a))-g'(c)(f(b)-f(a))&=0
 \section{Integration}
 Students often misunderstand the importance of integration. It originated not from begin an inverse operation of differentiation, but as a tool to find the area under the function. It just so happens that they two serve as an inverse to each other. This point will be made very clear once you encounter differentiation and integration of multiple dimensions. \\~\\
 Integration has two underlying theories, that can be shown equivalent. These are the Darboux Integral and the Riemann Integral. We start our rigorous study on integration with the Darboux Integral. 
+
 \subsection{Darboux Integral}
 The area under the function will be approximated by small rectangles, their height will be exactly the function while the collection of their various widths, will be called a partition. Once we establish most of the proporties of paritions we will then take limits. 
-\begin{defn}{Partition}{}\\ Let $a<b$. A partition $P$ of the interval $[a,b]$ is a finite collection of points in $[a,b]$, one of which is $a$ and one of which is $b$. We write $P=\{a=t_0<t_1<t_2<\dots<t_n=b\}$ and $I_k=[t_{k-1},t_k]$. 
+\begin{defn}{Partition}{}\\
+Let $a,b\in\R$ such that $a<b$. A partition of the interval $[a,b]$ is a finite set of points $t_0,\dots,t_n$ such that $a=t_0<\cdots<t_n=b$. 
 \end{defn}
 
-Do note that a partition does not have to partition the $x$-axis equally. This means that rectangles can have different lengths. \\~\\
+A partition does not have to partition the $x$-axis equally. This means that rectangles can have different lengths. \\~\\
 For the heights, we obtain two approximations for the area, one that uses the shortest rectangle, and the other that uses the longest rectangles. 
 
-\begin{defn}{Lower and Upper Sum}{}\\ Suppose $f$ is bounded on $[a,b]$ and $P=\{t_0,\dots,t_n\}$ is a partition of $[a,b]$. Let $$m_k=\inf\{f(x):t_{k-1}\leq x\leq t_k\}$$ $$M_k=\sup\{f(x):t_{k-1}\leq x\leq t_k\}$$ The lower sum of $f$ for $P$, denoted by $L(f,P)$, is defined as $$L(f,P)=\sum_{k=1}^nm_k(t_k-t_{k-1})=\sum_{k=1}^nm_k\abs{I_k}$$ The upper sum of $f$ for $P$, denoted by $U(f,P)$, is defined as $$U(f,P)=\sum_{k=1}^nM_k(t_k-t_{k-1})=\sum_{k=1}^nM_k\abs{I_k}$$
+\begin{defn}{Lower and Upper Sum}{}\\
+Let $I$ be an interval. Let $f:I\to\R$ be a bounded function. Let $P=\{t_0,\dots,t_n\}$ be a partition of $I$. Define $$m_k=\inf\{f(x):t_{k-1}\leq x\leq t_k\}\;\;\;\;\text{ and }\;\;\;\;M_k=\sup\{f(x):t_{k-1}\leq x\leq t_k\}$$ The lower sum of $f$ for $P$, denoted by $L(f,P)$, is defined as $$L(f,P)=\sum_{k=1}^nm_k(t_k-t_{k-1})$$ The upper sum of $f$ for $P$, denoted by $U(f,P)$, is defined as $$U(f,P)=\sum_{k=1}^nM_k(t_k-t_{k-1})$$
 \end{defn}
 
 As indicated by the notation, the lower and upper sum not only depends on the function, but it also depends on the partition one takes since the supremum and infinum of each particular rectangle would be different if two different partitions are chosen. \\~\\
