--- a/Geometry and Topology/Algebraic Curves/Algebraic Curves.tex
+++ b/Geometry and Topology/Algebraic Curves/Algebraic Curves.tex
@@ -1,6 +1,6 @@
 \documentclass[a4paper]{article}
 
-\input{C:/Users/liula/Desktop/Latex/Headers V1.2.tex}
+\input{C:/Users/liula/Desktop/Latex/Headers/Headers.tex}
 
 \pagestyle{fancy}
 \fancyhf{}
@@ -26,7 +26,7 @@
 \begin{defn}{Curves}{} Let $k$ be a field. Let $X$ be a variety over $k$. We say that $X$ is a curve if $\dim(X)=1$. 
 \end{defn}
 
-\begin{prp}{}{} Let $k$ be an algebraically closed field. Let $C$ be an irreducible curve over $k$. Let $p\in C$ be a non-singular point. Then $\mO_{C,p}$ is a DVR. Moreover, the valuation is given by the degree of the regular function. \tcbline
+\begin{prp}{}{} Let $k$ be an algebraically closed field. Let $C$ be an irreducible curve over $k$. Let $p\in C$ be a non-singular point. Then $\mO_{C,p}$ is a DVR. Moreover, the valuation is given by the degree of the regular function. 
 \begin{proof}
 Since $p$ is non-singular, by definition $\mO_{C,p}$ is a regular local ring. Moreover, we know that $1=\dim(C)=\dim(\mO_{C,p})$ so that $\mO_{C,p}$ has Krull dimension $1$. By the equivalent characterization of DVR we conclude. 
 \end{proof}
@@ -34,9 +34,9 @@ Since $p$ is non-singular, by definition $\mO_{C,p}$ is a regular local ring. Mo
 
 We denote the valuation map by $v_p:\text{Frac}(\mO_{C,p})\to\Z$. 
 
-\begin{eg}{}{} Consider the projective curve $C=\V(x^2+y^2-z^2)\subset\Prj_\C^2$. Let $p=[p_0:p_1:p_2]$ be a point on the curve. \\~\\
+\begin{eg}{}{} Consider the projective curve $C=\V(x^2+y^2-z^2)\subset\Prj_\C^2$. Let $p=[p_0:p_1:p_2]$ be a point on the curve. \\
 
-If $p_2\neq 0$, then $p\in U_2$. Under the affine chart $(U_2,\varphi_2)$, we find that $C_2=\varphi_2(C\cap U_2)=\V(x^2+y^2-1)$. The corresponding coordinate ring is given by $\frac{\C[x,y]}{(x^2+y^2-1)}$. The formula for the local ring in the affine case gives $$\mO_{C,p}\cong\left(\frac{\C[x,y]}{(x^2+y^2-1)}\right)_{m_{(p_0/p_2,p_1/p_2)}}$$ Recall that the unique maximal ideal of the local ring is given as the $\mO_{X,p}$-module $m_p=\{f\in\C[C_2]\;|\;f(p_0/p_2,p_1/p_2)=0\}$, which under the nullstellensatz is the maximal ideal corresponding to the point $(p_0/p_2,p_1/p_2)$ and is given by $m_p=(x-r,y-s)$ where $r=p_0/p_1$ and $s=p_0/p_2$. By Nakayama's lemma, since $x-r,y-s$ generate $m_p$ we know that $x-r+m_p^2,y-s+m_p^2$ span the vector space $m_p/m_p^2$ over $\mO_{X,p}/m_p$. I claim that they are linearly dependent. This mean that I want to find $f+m_p^2$ and $g+m_p^2$ in $\mO_{X,p}/m_p$ that are non-trivial, and that $(x-r)f+(y-s)g+m_p^2=m_p^2$. This means that we want to find $f,g\in\mO_{X,p}\setminus m_p$ such that $(x-r)f+(y-s)g\in m_p^2$. Choose $f=x+r$ and $g=y+s$ to get $$(x-r)(x+r)+(y-s)(y+s)=x^2-r^2+y^2-s^2=1-1=0$$ since $(r,s)$ lie on the curve. Moreover, $x+r,y+s\mO_{X,p}\setminus m_p$ since evaluating at $(r,s)$ at the functions are non-zero. This verifies that $\mO_{X,p}$ is a regular local ring of dimension $1$, hence is a DVR. \\~\\
+If $p_2\neq 0$, then $p\in U_2$. Under the affine chart $(U_2,\varphi_2)$, we find that $C_2=\varphi_2(C\cap U_2)=\V(x^2+y^2-1)$. The corresponding coordinate ring is given by $\frac{\C[x,y]}{(x^2+y^2-1)}$. The formula for the local ring in the affine case gives $$\mO_{C,p}\cong\left(\frac{\C[x,y]}{(x^2+y^2-1)}\right)_{m_{(p_0/p_2,p_1/p_2)}}$$ Recall that the unique maximal ideal of the local ring is given as the $\mO_{X,p}$-module $m_p=\{f\in\C[C_2]\;|\;f(p_0/p_2,p_1/p_2)=0\}$, which under the nullstellensatz is the maximal ideal corresponding to the point $(p_0/p_2,p_1/p_2)$ and is given by $m_p=(x-r,y-s)$ where $r=p_0/p_1$ and $s=p_0/p_2$. By Nakayama's lemma, since $x-r,y-s$ generate $m_p$ we know that $x-r+m_p^2,y-s+m_p^2$ span the vector space $m_p/m_p^2$ over $\mO_{X,p}/m_p$. I claim that they are linearly dependent. This mean that I want to find $f+m_p^2$ and $g+m_p^2$ in $\mO_{X,p}/m_p$ that are non-trivial, and that $(x-r)f+(y-s)g+m_p^2=m_p^2$. This means that we want to find $f,g\in\mO_{X,p}\setminus m_p$ such that $(x-r)f+(y-s)g\in m_p^2$. Choose $f=x+r$ and $g=y+s$ to get $$(x-r)(x+r)+(y-s)(y+s)=x^2-r^2+y^2-s^2=1-1=0$$ since $(r,s)$ lie on the curve. Moreover, $x+r,y+s\mO_{X,p}\setminus m_p$ since evaluating at $(r,s)$ at the functions are non-zero. This verifies that $\mO_{X,p}$ is a regular local ring of dimension $1$, hence is a DVR. \\
 
 We can even find its uniformizer and valuation. Since $x-r$ and $y+s$ are linearly dependent and spans $m_p/m_p^2$, any one of the two is a basis for the vector space. WLOG take $x-r$ to be a basis. Nakayama's lemma implies that $x-r$ generates $m_p$. Being a DVR means that for all $f\in\mO_{X,p}$, $f=u(x-r)^n$ where $u$ is invertible. Then the valuation of $f$ is $n$. 
 \end{eg}
@@ -55,6 +55,15 @@ Moreover, within each birational class of irreducible curves, one can discuss th
 \begin{prp}{}{} Let $k$ be a field. Let $C$ be a smooth curve over $k$. Then for any projective variety $X\subseteq\Prj^n$ and rational map $\phi:C\to X$, there exists a regular map $$\overline{\phi}:C\to X$$ such that $\overline{\phi}|_U=\phi|_U$ for some dense subset $U\subseteq C$. 
 \end{prp}
 
+\begin{eg}{}{}\\
+Let $k$ be a field. Consider the rational map $\phi:\Prj_k^1\to\Prj_k^2$ defined by $$\phi([s:t])=\left[\frac{s+t}{s}:\frac{st+t^2}{(s-t)^2}:\frac{s^2-t^2}{t^2}\right]$$ This map can be extended to the morphism of varieties $$\overline{\phi}([s:t])=[t^2(s-t)^2(s+t):t^3s(s+t):(s-t)^2s(s^2-t^2)]$$
+\begin{proof}\\
+Notice that the degrees of each component is constant. Moreover, they simultaneously vanish if and only if $s=t=0$. Finally, by dividing each coordinate with $\frac{s(s-t)^2t^2}{s+t}$ we obtain the original rational map, and hence this morphism of varieties agree with the rational map. 
+\end{proof}
+\end{eg}
+
+Note that the extended map is obtained by clearing denominators, because by clearing denominators we are multiplying each coordinate with the same map, and because the coordinates are projective this does not change the projective coordinates. 
+
 \begin{prp}{}{} Let $k$ be an algebraically closed field. Let $X,Y$ be smooth irreducible projective curves over $k$. Let $\phi:X\to Y$ be a non-constant regular map. Then $\phi$ is a finite morphism. 
 \end{prp}
 
@@ -64,7 +73,7 @@ Moreover, within each birational class of irreducible curves, one can discuss th
 \subsection{Birational Classification of Irreducible Curves}
 We would like to classify all irreducible curves up to birational classes. The first theorem is the following. 
 
-\begin{thm}{}{} Let $k$ be an algebraically closed field. Let $C$ be an irreducible curve over $k$. Then $C$ is birational to a unique projective smooth irreducible curve. \tcbline
+\begin{thm}{}{} Let $k$ be an algebraically closed field. Let $C$ be an irreducible curve over $k$. Then $C$ is birational to a unique projective smooth irreducible curve. 
 \begin{proof}
 We know that $C$ is birational to its normalization, which is a smooth curve. 
 \end{proof}
