--- a/Geometry and Topology/Algebraic Geometry 1/Algebraic Geometry 1.tex
+++ b/Geometry and Topology/Algebraic Geometry 1/Algebraic Geometry 1.tex
@@ -1350,7 +1350,7 @@ By 5.2.2, we obtain a further isomrphism $$\mO_{\varphi_i(U_i\cap V),\varphi(p)}
 \end{proof}
 \end{prp}
 
-\begin{prp}{}{} Let $k$ be a field. Let $X$ be a variety over $k$. Let $p\in X$. Then we have $$\dim(X)=\dim(\mO_{X,p})$$
+\begin{prp}{}{} Let $k$ be a field. Let $X$ be an irreducible projective variety over $k$. Let $p\in X$. Then we have $$\dim(X)=\dim(\mO_{X,p})$$
 \end{prp}
 
 \begin{defn}{Induced Map on Germs}{} Let $k$ be a field. Let $X,Y$ be varieties over $k$. Let $\phi:X\to Y$ be a morphism of varieties. Let $p\in X$ be a point. Define the induced map on germs to be the map $$\phi^\ast:\mO_{Y,f(p)}\to\mO_{X,p}$$ given by $(U,f)\mapsto(\phi^{-1}(U),f\circ\phi)$. 
